--- a/HackVSIT/css/title.css
+++ b/HackVSIT/css/title.css
@@ -1,19 +1,91 @@
 *{
     box-sizing: border-box ;
 }
-body h1{
-    font-size: 30px;
+.started{
+    font-size: 24px;
     color : #255784;
     padding-right: 100px;
     font-family: candara;
     margin: 0;
-    padding: 160px 150px 150px;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     background:#060c21;
-    font-family: candara;
+}
+.started h1{
+    padding: 160px 100px 150px;
+}
+.buttonn a{
+    position: relative;
+    display: inline-block;
+    padding: 15px 30px;
+    font-family:candara;
+    letter-spacing: 4px;
+    text-decoration: none;
+    overflow: hidden;
+    transition: 0.2s;
+    background: #060c21;
+    color:#255784;
+    text-transform: uppercase;
+}
+.buttonn a:hover {
+    color : #255784;
+    background: #2196f3;
+    box-shadow: 0 0 10px #2196f3 , 0 0 40px #2196f3 , 0 0 80px #2196f3 ;
+    transition-delay: 1.5s;
+}
+.buttonn a span {
+    position: absolute ;
+    display : block ;
+}
+.buttonn a span:nth-child(1){
+    top: 0 ;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg ,transparent , #2196f3);
+}
+.buttonn a:hover span:nth-child(1){
+    left: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+}
+.buttonn a span:nth-child(3){ 
+    bottom: 0 ;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg , transparent , #2196f3);
+}
+.buttonn a:hover span:nth-child(3){
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.75s;
+}
+.buttonn a span:nth-child(2){ 
+    right:  0;
+    top: -100%;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(180deg , transparent , #2196f3);
+}
+.buttonn a:hover span:nth-child(2){
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0.5s;
+}
+.buttonn a span:nth-child(4){ 
+    left:  0;
+    bottom: -100%;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(360deg , transparent , #2196f3);
+}
+.buttonn a:hover span:nth-child(4){
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 1s;
 }
 .topbar{
     width : 100% ;
@@ -58,7 +130,7 @@ a {
 .FAQ{
     background:white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    min-height: 100vh;
+    min-height: 80vh;
 }
 .FAQ p{
     color: #060c21;
